--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
     text-align: center;
     font-family: sans-serif;
     color: #4C566A;
-    border-radius: 10px;
+    border-radius: 5px;
     transition: 0.15s;
     border: 0;
 }
@@ -17,7 +17,8 @@ h1 {
 }
 
 input {
-    padding: 3px;
+    margin: 5px;
+    padding: 5px;
     box-shadow: inset 0 0 5px #D8DEE9;
     font-size: 16px;
     text-align: left;
@@ -27,12 +28,18 @@ input:read-only {
     background-color: #ECEFF4;
 }
 
-input:focus {
-    box-shadow: inset 0 0 5px #D8DEE9;
+input:read-write:focus {
+    box-shadow: inset 0 0 15px #D8DEE9;
 }
 
-/* .section {
+.split {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: 1fr;
+}
+
+.section {
     margin: auto;
     width: 100%;
     max-width: 1000px;
-} */
+}
