--- a/graph.css
+++ b/graph.css
@@ -1,23 +1,40 @@
-#graph{
+#graph {
     margin: auto;
-    width: 90%;
     height: 400px;
-    display: grid;
-    grid-template-columns: 1fr 2fr;
+    width: 50%;
+}
+
+#graph #canvas {
+    width: 100%;
+    height: 350px;
 }
 
 #graph #input {
-    display: grid;
-    grid-template-columns: 1fr;
-    grid-template-rows: repeat(5, 1fr);
-    align-content: center;
+    width: 100%;
+    height: 50px;
 }
 
-#graph #input p{
-    text-align: right;
-    vertical-align: middle;
+#graph #input * {
+    text-align: left;
+    width: 100%;
 }
 
-#graph #input .label{
-    text-align: right;
+#graph #input .param {
+    padding: 5px;
+    width: 25%;
+    float: left;
+}
+
+#graph #input p {
+    margin: 5px;
+    font-weight: bold;
+}
+
+#graph #input input {
+    padding: 5px;
+    box-shadow: inset 0 0 5px #D8DEE9;
+}
+
+#graph #input input:focus {
+    background-color: #ECEFF4;
 }
