--- a/graph.css
+++ b/graph.css
@@ -1,10 +1,10 @@
 #graph {
     margin: auto;
-    height: 400px;
+    height: 750px;
     width: 50%;
 }
 
-#graph #canvas {
+#graph .chart {
     width: 100%;
     height: 350px;
 }
@@ -21,7 +21,7 @@
 
 #graph #input .param {
     padding: 5px;
-    width: 25%;
+    width: 20%;
     float: left;
 }
 
@@ -32,9 +32,12 @@
 
 #graph #input input {
     padding: 5px;
+}
+
+#graph #input input:read-write {
     box-shadow: inset 0 0 5px #D8DEE9;
 }
 
-#graph #input input:focus {
+#graph #input input:read-write:focus {
     background-color: #ECEFF4;
 }
