--- a/styles/global.css
+++ b/styles/global.css
@@ -12,13 +12,11 @@
     border: 0;
 }
 
-h1 {
-    font-size: 18px;
-    font-weight: bold;
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+    -webkit-appearance: none;
 }
 
-.section {
-    margin: auto;
-    width: 100%;
-    max-width: 1000px;
+input[type=number] {
+    -moz-appearance:textfield;
 }
